--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "react-native-pdf",
-    "version": "6.7.4",
+    "version": "6.7.4-0.1.0",
     "summary": "A react native PDF view component",
     "description": "A react native PDF view component, support ios and android platform",
     "main": "index.js",
@@ -44,6 +44,7 @@
     "files": [
         "android/",
         "ios/",
+        "harmony",
         "windows/",
         "DoubleTapView.js",
         "index.d.ts",
