--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "react-native-pdf",
-    "version": "6.7.4-0.1.2",
+    "name": "@react-native-oh-tpl/react-native-pdf",
+    "version": "6.7.4-0.1.3",
     "summary": "A react native PDF view component",
     "description": "A react native PDF view component, support ios and android platform",
     "main": "index.js",
@@ -8,6 +8,9 @@
     "repository": {
         "type": "git",
         "url": "git+https://github.com/wonday/react-native-pdf.git"
+    },
+    "harmony": {
+        "alias": "react-native-pdf"
     },
     "keywords": [
         "react-component",
