--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@react-native-oh-tpl/react-native-pdf",
-    "version": "6.7.4-0.1.4",
+    "version": "6.7.4-0.1.5",
     "summary": "A react native PDF view component",
     "description": "A react native PDF view component, support ios and android platform",
     "main": "index.js",
@@ -32,7 +32,8 @@
     },
     "dependencies": {
         "crypto-js": "4.2.0",
-        "deprecated-react-native-prop-types": "^2.3.0"
+        "deprecated-react-native-prop-types": "^2.3.0",
+        "react-native-pdf": "6.7.4"
     },
     "devDependencies": {
         "@babel/core": "^7.20.2",
