--- a/harmony/pdfview/oh-package.json5
+++ b/harmony/pdfview/oh-package.json5
@@ -1,11 +1,11 @@
 {
-  "name": "pdfview",
-  "version": "1.0.0",
+  "name": "@react-native-oh-tpl/react-native-pdf",
+  "version": "6.7.4-0.1.6",
   "description": "Please describe the basic information.",
   "main": "Index.ets",
   "author": "",
   "license": "Apache-2.0",
   "dependencies": {
-    "rnoh": "file:../rnoh"
+    "@rnoh/react-native-openharmony": 'file:../react_native_openharmony'
   }
 }
