feat: 适配pdfkit，基本预览功能，包括预览本地文件和在线文件。

--- a/harmony/pdfview/oh-package.json5
+++ b/harmony/pdfview/oh-package.json5
@@ -6,6 +6,7 @@
   "author": "",
   "license": "Apache-2.0",
   "dependencies": {
-    "@rnoh/react-native-openharmony": 'file:../react_native_openharmony'
+    "@rnoh/react-native-openharmony": 'file:../react_native_openharmony',
+    "PDFView": "file:./lib/PDFView.har"
   }
 }
