--- a/harmony/pdfview/oh-package.json5
+++ b/harmony/pdfview/oh-package.json5
@@ -1,6 +1,6 @@
 {
   "name": "@react-native-oh-tpl/react-native-pdf",
-  "version": "6.7.4-0.2.2",
+  "version": "6.7.4-0.2.2-beta",
   "description": "Please describe the basic information.",
   "main": "Index.ets",
   "author": "",
