fix:合并sig_dev_0730分支到sig分支

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@react-native-oh-tpl/react-native-pdf",
-    "version": "6.7.4-0.2.2",
+    "version": "6.7.4-0.2.7-beta",
     "summary": "A react native PDF view component",
     "description": "A react native PDF view component, support ios and android platform",
     "main": "index.js",
