--- a/harmony/pdfview/oh-package.json5
+++ b/harmony/pdfview/oh-package.json5
@@ -1,11 +1,12 @@
 {
   "name": "@react-native-oh-tpl/react-native-pdf",
-  "version": "6.7.4-0.2.2",
+  "version": "6.7.4-0.2.7-beta",
   "description": "Please describe the basic information.",
   "main": "Index.ets",
   "author": "",
   "license": "Apache-2.0",
   "dependencies": {
-    "@rnoh/react-native-openharmony": 'file:../react_native_openharmony'
+    "@rnoh/react-native-openharmony": 'file:../react_native_openharmony',
+    "PDFView": "file:./lib/PDFView.har"
   }
 }
