--- a/harmony/pdfview/oh-package.json5
+++ b/harmony/pdfview/oh-package.json5
@@ -6,7 +6,6 @@
   "author": "",
   "license": "Apache-2.0",
   "dependencies": {
-    "@rnoh/react-native-openharmony": 'file:../react_native_openharmony',
-    "PDFView": "file:./lib/PDFView.har"
+    "@rnoh/react-native-openharmony": 'file:../react_native_openharmony'
   }
 }
