--- a/harmony/pdfview/oh-package.json5
+++ b/harmony/pdfview/oh-package.json5
@@ -1,11 +1,11 @@
 {
   "name": "@react-native-oh-tpl/react-native-pdf",
-  "version": "6.7.4-0.3.1",
+  "version": "6.7.4-0.3.2",
   "description": "Please describe the basic information.",
   "main": "Index.ets",
   "author": "",
   "license": "Apache-2.0",
   "dependencies": {
-    "@rnoh/react-native-openharmony": 'file:../react_native_openharmony'
+    "@rnoh/react-native-openharmony": 'file:../../../libs/react_native_openharmony-5.0.0.802.har'
   }
 }
